[GTK][DRT] Wrong cache model is taken in LayoutTestController's setCacheModel() https://bugs.webkit.org/show_bug.cgi?id=86962

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-05-22
Reviewed by Gustavo Noronha Silva.

* DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
(LayoutTestController::setCacheModel): Sets WEBKIT_CACHE_MODEL_WEB_BROWSER if argument is 2.

Canonical link: https://commits.webkit.org/104858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118007 268f45cc-cd09-0410-ab3c-d52691b4dbfc